[ADD]: google api amil support

--- a/Core/config.example
+++ b/Core/config.example
@@ -15,6 +15,7 @@ define(
         'MAIL_PORT' => {MAIL_PORT},
         'MAIL_HOST' => '{MAIL_HOST}',
         'MAIL_FROM' => '{MAIL_FROM}',
+        'MAIL_PASSWORD' => '{MAIL_PASSWORD}',
         'HOST' => '{HOST}',
     ]
 );
